@@ -115,6 +115,7 @@ BA  30- [libpari] Flx_Fl_sub, Flx_is_totally_split
 BA  33- [libpari] RgV_type2, closure_callgen0prec
 BA  34- lfuncreate: support for closures of arity 0
     35- [libpari] ZX_sturm_irred, ZX_realroots_irred
+    36- [libpari] QM_image, QM_image_shallow
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
